2009-08-30  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added --xml-rpc-listen-all option. If true is given to this
	option, aria2 listens incoming XML-RPC requests on all network
	interfaces. If false is given, listens only on local loopback
	interface. The default value is false.
	* src/HttpListenCommand.cc
	* src/OptionHandlerFactory.cc
	* src/SocketCore.cc
	* src/SocketCore.h
	* src/prefs.cc
	* src/prefs.h
	* src/usage_text.h

2009-08-21  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	* Release 1.5.2

2009-08-21  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated Ukrainian and Russian translations. Thanks to all
	translators.
	* po/ru.po
	* po/uk.po

2009-08-19  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Bump up version number to 1.5.2
	* configure.ac

2009-08-19  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Get comment, comment.utf-8, created by and creation date from
	.torrent file and print them in -S output.
	* src/bittorrent_helper.cc
	* src/bittorrent_helper.h
	* test/BittorrentHelperTest.cc
	* test/test.torrent
	* test/utf8.torrent

2009-08-18  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Show exact file size along in -S option output.
	* src/Util.h
	* src/bittorrent_helper.cc
	* test/UtilTest.cc

2009-08-18  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Avoided unnecessary memory allocation in
	BitfieldMan::getCompletedLength().
	* src/BitfieldMan.cc

2009-08-18  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that download fails if
	SocketCore::establishConnection() throws exception and aria2
	doesn't try another address.
	* src/AbstractCommand.cc
	* src/InitiateConnectionCommand.cc
	* src/message.h

2009-08-09  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed sqlite3.m4 macro so that sqlite3_open_v2 function is
	detected properly.
	* m4/sqlite3.m4

2009-08-09  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
