@@ -1404,6 +1404,15 @@ writes the piece to the appropriate files.</td>
 </p>
 </dd>
 <dt class="hdlist1">
+<strong>--xml-rpc-listen-all</strong>[=<em>true</em>|<em>false</em>]
+</dt>
+<dd>
+<p>
+  Listen incoming XML-RPC requests on all network interfaces. If false
+  is given, listen only on local loopback interface.  Default: <em>false</em>
+</p>
+</dd>
+<dt class="hdlist1">
 <strong>--xml-rpc-listen-port</strong>=PORT
 </dt>
 <dd>
@@ -3226,7 +3235,7 @@ files in the program, then also delete it here.</p></div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2009-07-15 22:09:11 JST
+Last updated 2009-08-30 21:27:41 JST
 </div>
 </div>
 </body>
